# ganymede-app

./: CHANGELOG.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
